complete sendInvitation controller
