# backend/src/features/docs/swaggerDocumentation.json
@@ -28,7 +28,21 @@
   ],
   "servers": [
     {
-      "url": "http://localhost:5000/api/v1"
+      "url": "http://localhost:5000/api/v1",
+      "description": "API V1"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "Routes related to user authentication."
+    },
+    {
+      "name": "User",
+      "description": "Routes related to user information."
+    },
+    {
+      "name": "Friends"
     }
   ],
   "paths": {
@@ -58,7 +72,7 @@
                 "properties": {
                   "email": {
                     "type": "string",
-                    "example": "pelusa@gmail.com"
+                    "example": "tomas@gmail.com"
                   },
                   "password": {
                     "type": "string",
@@ -117,10 +131,6 @@
                     "message": {
                       "type": "string",
                       "example": "User does not exists"
-                    },
-                    "stack": {
-                      "type": "string",
-                      "example": "Error: \u001b[31mUser does not exists\u001b[39m\n    at /home/tomas/Projects/discord-clonde/backend/src/features/user/user.service.ts:29:11\n    at Generator.next (<anonymous>)\n    at fulfilled (/home/tomas/Projects/discord-clonde/backend/src/features/user/user.service.ts:5:58)\n    at processTicksAndRejections (node:internal/process/task_queues:96:5)"
                     }
                   }
                 }
@@ -141,10 +151,6 @@
                     "message": {
                       "type": "string",
                       "example": "Incorrect email or password"
-                    },
-                    "stack": {
-                      "type": "string",
-                      "example": "Error: \u001b[31mIncorrect email or password\u001b[39m\n    at /home/tomas/Projects/discord-clonde/backend/src/features/auth/auth.service.ts:9:11\n    at Generator.next (<anonymous>)\n    at fulfilled (/home/tomas/Projects/discord-clonde/backend/src/features/auth/auth.service.ts:5:58)\n    at processTicksAndRejections (node:internal/process/task_queues:96:5)"
                     }
                   }
                 }
@@ -220,10 +226,6 @@
                     "message": {
                       "type": "string",
                       "example": "User does not exists"
-                    },
-                    "stack": {
-                      "type": "string",
-                      "example": "Error: \u001b[31mUser does not exists\u001b[39m\n    at /home/tomas/Projects/discord-clonde/backend/src/features/user/user.service.ts:29:11\n    at Generator.next (<anonymous>)\n    at fulfilled (/home/tomas/Projects/discord-clonde/backend/src/features/user/user.service.ts:5:58)\n    at processTicksAndRejections (node:internal/process/task_queues:96:5)"
                     }
                   }
                 }
@@ -244,10 +246,6 @@
                     "message": {
                       "type": "string",
                       "example": "Incorrect email or password"
-                    },
-                    "stack": {
-                      "type": "string",
-                      "example": "Error: \u001b[31mIncorrect email or password\u001b[39m\n    at /home/tomas/Projects/discord-clonde/backend/src/features/auth/auth.service.ts:9:11\n    at Generator.next (<anonymous>)\n    at fulfilled (/home/tomas/Projects/discord-clonde/backend/src/features/auth/auth.service.ts:5:58)\n    at processTicksAndRejections (node:internal/process/task_queues:96:5)"
                     }
                   }
                 }
@@ -257,7 +255,7 @@
         }
       }
     },
-    "/user/register": {
+    "/users/register": {
       "post": {
         "tags": [
           "User"
@@ -379,10 +377,122 @@
                     "message": {
                       "type": "string",
                       "example": "Email already taken"
-                    },
-                    "stack": {
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/friends/sendInvitation": {
+      "post": {
+        "tags": [
+          "Friends"
+        ],
+        "summary": "Send Inviation",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "email"
+                ],
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "example": "rufo@gmail.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Send Inviation Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
                       "type": "string",
-                      "example": "Error: \u001b[31mEmail already taken\u001b[39m\n    at /home/tomas/Projects/discord-clonde/backend/src/features/user/user.service.ts:35:11\n    at Generator.next (<anonymous>)\n    at fulfilled (/home/tomas/Projects/discord-clonde/backend/src/features/user/user.service.ts:5:58)\n    at processTicksAndRejections (node:internal/process/task_queues:96:5)"
+                      "example": "Successfully sent invitation to rufo@gmail.com"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Send Inviation Token Expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 401
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Unauthorized"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Send Inviation To Inexistent User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 404
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "User with email \"user@email.com\" not found"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Inviation Already Sent",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 409
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Invitation already sent, please wait for the user to accept it"
                     }
                   }
                 }
